--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,18 +30,21 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   flutter_bloc: ^8.1.3
   font_awesome_flutter: ^10.6.0
+  hive: ^2.2.3
+  flutter_launcher_icons: ^0.13.1
+  hive_flutter: ^1.1.0
 
 dev_dependencies:
+  build_runner: ^2.4.7
+  hive_generator: ^2.0.1
+
   flutter_test:
     sdk: flutter
-
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
   # activated in the `analysis_options.yaml` file located at the root of your
