--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   hive_flutter: ^1.1.0
   intl: ^0.18.1
   modal_progress_hud_nsn: ^0.4.0
+  shared_preferences: ^2.2.2
 
 dev_dependencies:
   build_runner: ^2.4.7
